@@ -1,7 +1,7 @@
 unit BDPSplashScreenUnit;
 
 {$mode Delphi}
-
+{$WARN 5024 off : Parameter "$1" not used}
 interface
 
 uses
