@@ -54,4 +54,5 @@ Selected4=4
 Selected5=5
 Selected6=6
 Selected7=7
+ActiveColor=7
 
